# tiliqua

./: .gitmodules
.github/workflows/: main.yml
gateware/: pyproject.toml
gateware/docs/: bootloader.rst  gettingstarted.rst  hardware.rst  index.rst  install.rst  technical.rst  top.rst
gateware/docs/quickstart/: tlq_expander.rst  tlq_module.rst
gateware/scripts/: bootstrap.sh  build_bitstreams_no_soc.sh  build_bitstreams_soc.sh
gateware/src/rs/hal/: Cargo.toml
gateware/src/rs/hal/src/: grain_player.rs  lib.rs  persist.rs  pmod.rs  polysynth.rs  scope.rs  si5351.rs  spiflash.rs  vector.rs
gateware/src/rs/lib/src/: calibration.rs  draw.rs  lib.rs  logo_coords.rs  manifest.rs  palette.rs  scope.rs  ui.rs
gateware/src/rs/opts/src/: cc_map.rs  enumeration.rs  integer.rs  lib.rs  traits.rs
gateware/src/rs/opts_derive/src/: lib.rs
gateware/src/tiliqua/: cli.py  flash.py  midi.py  scope.py  sim.py  tiliqua_platform.py  tiliqua_soc.py  usb_host.py  video.py
gateware/src/tiliqua/dsp/: __init__.py  block.py  delay_line.py  filters.py  misc.py  mix.py  oneshot.py  resample.py  spectral.py  stream_util.py  voice_block.py
gateware/src/tiliqua/midi/: __init__.py  decode_serial.py  decode_usb.py  misc.py  types.py  voice_tracker.py
gateware/src/tiliqua/periph/: eurorack_pmod.py  grain_player.py  overlay.py
gateware/src/tiliqua/raster/: __init__.py  persist.py  scope.py  stroke.py
gateware/src/tiliqua/video/: dvi.py  framebuffer.py  modeline.py  palette.py  types.py
gateware/src/top/beamrace/: top.py
gateware/src/top/bootloader/fw/src/: main.rs
gateware/src/top/dsp/: top.py
gateware/src/top/macro_osc/: top.py
gateware/src/top/macro_osc/fw/src/: main.rs  options.rs  opts.rs
gateware/src/top/polysyn/: top.py
gateware/src/top/polysyn/fw/: Cargo.toml
gateware/src/top/polysyn/fw/src/: lib.rs  main.rs  options.rs  opts.rs  wavetable.rs
gateware/src/top/sampler/: top.py
gateware/src/top/sampler/fw/src/: channel.rs  flash.rs  lib.rs  main.rs  options.rs
gateware/src/top/selftest/fw/src/: main.rs  options.rs
gateware/src/top/sid/: top.py
gateware/src/top/sid/fw/src/: lib.rs  main.rs  options.rs  opts.rs
gateware/src/top/usb_host/: top.py
gateware/src/top/vectorscope_no_soc/: top.py
gateware/src/top/xbeam/: top.py
gateware/src/top/xbeam/fw/: Cargo.toml
gateware/src/top/xbeam/fw/src/: lib.rs  main.rs  options.rs  opts.rs
gateware/tests/: test_dsp.py  test_midi.py  test_voice_block.py
hardware/tiliqua-motherboard/: gpdi.kicad_sch  tiliqua-motherboard.kicad_pcb  usbc.kicad_sch  (+2 more)
(+34 files in other folders)
