[project]
name = "tiliqua"
version = "0.0.0"
description = "Tiliqua DSP library and reference designs."

requires-python = ">=3.11"
dependencies = [
    "amaranth[builtin-yosys]==0.5.4",
    "amaranth-boards @ git+https://github.com/amaranth-lang/amaranth-boards@main",
    "amaranth-soc @ git+https://github.com/amaranth-lang/amaranth-soc@main",
    "amaranth-stdio @ git+https://github.com/amaranth-lang/amaranth-stdio@main",
    "luna-usb @ git+https://github.com/greatscottgadgets/luna@main",
    "minerva @ git+https://github.com/minerva-cpu/minerva@main",
    "luna-soc @ git+https://github.com/vk2seb/luna-soc@6ec272",
    "guh @ git+https://github.com/apfaudio/guh@d44315",
    "scipy>=1.9.3",
    "matplotlib>=3.9.0",
    "parameterized>=0.9.0",
    "yowasp-yosys==0.52.0.0.post894",
    "yowasp-nextpnr-ecp5",
    "gitpython>=3.1.43",
    "dataclasses-json>=0.6.7",
    "fastcrc>=0.3.2",
    "portalocker>=3.1.1",
    "apollo-fpga>=1.1.1",
    "pytest-xdist>=3.8.0",
    "colorama>=0.4.6",
]

[tool.pdm.resolution.overrides]
# note: guh depends on cyntion, which requires upstream luna-soc
# this override resolves this dependency.
luna-soc = "git+https://github.com/vk2seb/luna-soc@6ec272"

[tool.pdm.dev-dependencies]
test = [
    "pytest",
]

docs = [
  "sphinx~=7.1",
  "sphinxcontrib-platformpicker~=1.4",
  "sphinx-rtd-theme~=2.0",
  "sphinx-autobuild",
]

[tool.pdm.scripts]
_.env_file = ".env.toolchain"
# Top-level bitstreams
bootloader         = "src/top/bootloader/top.py"
# (SoC bitstreams)
polysyn            = "src/top/polysyn/top.py"
selftest           = "src/top/selftest/top.py"
xbeam              = "src/top/xbeam/top.py"
macro_osc          = "src/top/macro_osc/top.py"
sid                = "src/top/sid/top.py"
sampler            = "src/top/sampler/top.py"
# (Non-SoC bitstreams)
dsp                = "src/top/dsp/top.py"
beamrace           = "src/top/beamrace/top.py"
vectorscope_no_soc = "src/top/vectorscope_no_soc/top.py"
bootstub           = "src/top/bootstub/top.py"
usb_audio          = "src/top/usb_audio/top.py"
usb_host           = "src/top/usb_host/top.py"
# Additional utilities
test               = { cmd = "pytest -n auto tests/" }
colors_vectorscope = { call = "top.vectorscope_no_soc.top:colors()" }
# Documentation
document.cmd = "sphinx-build docs/ docs/_build/ -W --keep-going"
document-live.cmd = "sphinx-autobuild docs/ docs/_build/ --watch ."
flash = {call = "tiliqua.flash:main"}
